# tayle_test

./: .env  .env.dev  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: .dockerignore  Dockerfile  Makefile  db.sqlite3  default_data.json  start.sh
app/apps/account/: admin.py  models.py  urls.py  views.py
app/apps/account/migrations/: 0001_initial.py  0002_alter_account_company_alter_account_country_and_more.py
app/apps/account/templates/account/: account_detail.html  account_transaction.html
app/apps/account/tests/: test_models.py
app/apps/balance/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/apps/balance/migrations/: 0001_initial.py  0002_alter_accountbilltransaction_options.py  0003_alter_accountbilltransaction_from_bills.py  0004_alter_accountbilltransaction_reason_and_more.py
app/apps/balance/services/: service.py  t_transaction.py
app/apps/balance/templates/balance/: transaction_create.html
app/apps/balance/tests/: test_logic.py  test_models.py  test_transaction_example.py
app/apps/core/: context_processors.py  models.py  views.py
app/apps/core/templates/core/: main.html
app/src/: settings.py  urls.py
app/src/settings/: __init__.py
app/src/settings/components/: base.py  logging.py  rest_settings.py
app/src/settings/environments/: development.py  local.py  production.py
app/templates/: base.html  footer.html  header.html  index.html  sidebar.html
app/templates/registration/: logged_out.html  login.html
scripts/: deploy.sh  develop.sh  lint.sh  test.sh
