[tool.poetry]
name = "tayle_test"
version = "0.1.0"
description = ""
authors = ["vildan-valeev <vildan.maydanovich.valeev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-split-settings = "^1.1.0"
python-decouple = "^3.6"
django-cors-headers = "^3.12.0"
django-bootstrap-v5 = "^1.0.11"
django-stubs-ext = "^0.4.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
